--- a/skeleton-app/package.json
+++ b/skeleton-app/package.json
@@ -11,6 +11,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"svelte": "^4.2.7",
+		"svelte-confetti": "^1.3.1",
 		"vite": "^4.4.2"
 	},
 	"type": "module"
